examples/test/testpolicy15681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15681
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key2: value42
      key23: value14
      key47: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value4
          key18: value26
          key24: value39
      podSelector:
        matchLabels:
          key11: value36
          key41: value17
